# MarunochiAI

./: .env.example  .gitignore  LICENSE  PHASE-1-COMPLETE.md  README.md  RELEASE_NOTES_V1.0.md  pyproject.toml  test_a2a_integration.py
docs/: A2A-INTEGRATION.md  AI-RESEARCH-2025.md  IDE-INTEGRATIONS.md  IMPLEMENTATION_SUMMARY_DEC27.md  M4-PRO-OPTIMIZATION.md  NVIM_INTEGRATION_TROUBLESHOOTING.md  PART-1-CONTINUOUS-FINE-TUNING.md  PERFORMANCE_OPTIMIZATION_FINAL.md  PHASE-2-PROGRESS.md  PROJECT_STATUS_V1.0.md  STRATEGIC_VISION_2025.md  VALIDATION_REPORT_DEC27.md
integrations/nvim-marunochiAI/: README.md
integrations/nvim-marunochiAI/plugin/: marunochiAI.vim
integrations/vscode-marunochiAI/: README.md  package-lock.json  package.json
integrations/vscode-marunochiAI/src/: api.ts  chatPanel.ts  chatView.ts  codeActionProvider.ts  completionProvider.ts  extension.ts  inlineChat.ts  inlineCompletionProvider.ts  searchView.ts
marunochithe/: config.py  observability.py  resilience.py  storage.py
marunochithe/api/: __init__.py  benchai_client.py  models.py  server.py
marunochithe/code_understanding/: __init__.py  chunker.py  hybrid_searcher.py  indexer.py  keyword_indexer.py  models.py  parser.py  watcher.py
marunochithe/core/: __init__.py  inference.py  tools.py
marunochithe/integrations/: __init__.py  cli.py
marunochithe/utils/: logging.py
references/beej-c-guide/: README.md  beej-c-guide-complete.md  html
references/beej-c-guide/markdown/: 00-index.md  01-foreword.md  02-hello-world.md  03-variables-and-statements.md  04-functions.md  05-pointers.md  (+36 more)
research_logs/: PHASE2_IMPLEMENTATION.md  PHASE2_RESEARCH.md  PHASE3_RESEARCH.md  PROJECT_PROGRESS.md
scripts/: benchmark_performance.py  install.sh  quick_validation.py  stress_test_marunochiAI.py  validate_phase2.py
src/: __init__.py
src/api/: models.py
src/core/: inference.py
tests/: test_multi_agent_integration.py
tests/test_code_understanding/: __init__.py  test_chunker.py  test_hybrid_searcher.py  test_indexer.py  test_parser.py  test_watcher.py
(+49 files in other folders)
